yamls/zk-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zk-0
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zk
        node: node0
    spec:
      hostname: zk-0
      volumes:
        - name: zk-data
          hostPath: 
            path: /data/zk-cluster/zk-data-0
        - name: zk-logs
          hostPath: 
            path: /data/zk-cluster/zk-logs-0
      containers:
      - name: zk-0
        image: zookeeper
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: zk-data
          readOnly: false
          mountPath: "/data/zk-data"
        - name: zk-logs
          readOnly: false
          mountPath: "/data/zk-logs"
        ports:
        - containerPort: 2181
        - containerPort: 2888
        - containerPort: 3888
        #command: ['tail', '-f', '/etc/hosts']  
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zk-1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zk
        node: node1
    spec:
      hostname: zk-1
      volumes:
        - name: zk-data
          hostPath: 
            path: /data/zk-cluster/zk-data-1
        - name: zk-logs
          hostPath: 
            path: /data/zk-cluster/zk-logs-1
      containers:
      - name: zk-1
        image: zookeeper
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: zk-data
          readOnly: false
          mountPath: "/data/zk-data"
        - name: zk-logs
          readOnly: false
          mountPath: "/data/zk-logs"
        ports:
        - containerPort: 2181
        - containerPort: 2888
        - containerPort: 3888
        #command: ['tail', '-f', '/etc/hosts']  
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: zk-2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zk
        node: node2
    spec:
      hostname: zk-2
      volumes:
        - name: zk-data
          hostPath: 
            path: /data/zk-cluster/zk-data-2
        - name: zk-logs
          hostPath: 
            path: /data/zk-cluster/zk-logs-2
      containers:
      - name: zk-2
        image: zookeeper
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: zk-data
          readOnly: false
          mountPath: "/data/zk-data"
        - name: zk-logs
          readOnly: false
          mountPath: "/data/zk-logs"
        ports:
        - containerPort: 2181
        - containerPort: 2888
        - containerPort: 3888
        #command: ['tail', '-f', '/etc/hosts']
