yamls/grafana.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: grafana
    spec:
    #   nodeSelector:
    #     node-role.kubernetes.io/master: ""
      containers:
      - name: grafana
        image: grafana/grafana:5.2.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        # - mountPath: /etc/ssl/certs
        #   name: ca-certificates
        #   readOnly: true
        - mountPath: /var/lib/grafana
          name: grafana-storage
      securityContext: 
          runAsUser: 472
          fsGroup: 472
      volumes:
    #   - name: ca-certificates
    #     hostPath:
    #       path: /etc/ssl/certs
      - name: grafana-storage
        persistentVolumeClaim: 
          claimName: grafana-storage-pvc
        # emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: grafana
  name: grafana
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
  selector:
    k8s-app: grafana
