yamls/postgresql.yaml
---
# Source: postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-postgresql-headless
  labels:
    app: postgresql
    chart: postgresql-3.9.1
    release: "dev"
    heritage: "Tiller"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: "dev"

---
# Source: postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-postgresql
  labels:
    app: postgresql
    chart: postgresql-3.9.1
    release: "dev"
    heritage: "Tiller"
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    targetPort: postgresql
  selector:
    app: postgresql
    release: "dev"
    role: master

---
# Source: postgresql/templates/statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: dev-postgresql
  labels:
    app: postgresql
    chart: postgresql-3.9.1
    release: "dev"
    heritage: "Tiller"
spec:
  serviceName: dev-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: postgresql
      release: "dev"
      role: master
  template:
    metadata:
      name: dev-postgresql
      labels:
        app: postgresql
        chart: postgresql-3.9.1
        release: "dev"
        heritage: "Tiller"
        role: master
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: dev-postgresql
        image: docker.io/bitnami/postgresql:10.6.0
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          
        ports:
        - name: postgresql
          containerPort: 5432
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "postgres" --host $POD_IP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U "postgres" --host $POD_IP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /bitnami/postgresql
      volumes:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        storageClassName: "rook-ceph-block"
